; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-client.c_htc_wakeup.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-client.c_htc_wakeup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i64, i64, i64, i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }
%struct.TYPE_4__ = type { i32 (%struct.connection*)* }

@conn_wait_net = common dso_local global i64 0, align 8
@conn_wait_aio = common dso_local global i64 0, align 8
@conn_expect_query = common dso_local global i64 0, align 8
@C_WANTWR = common dso_local global i32 0, align 4
@conn_generation = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @htc_wakeup(%struct.connection* %0) #0 {
  %2 = alloca %struct.connection*, align 8
  store %struct.connection* %0, %struct.connection** %2, align 8
  %3 = load %struct.connection*, %struct.connection** %2, align 8
  %4 = getelementptr inbounds %struct.connection, %struct.connection* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @conn_wait_net, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %14, label %8

8:                                                ; preds = %1
  %9 = load %struct.connection*, %struct.connection** %2, align 8
  %10 = getelementptr inbounds %struct.connection, %struct.connection* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @conn_wait_aio, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %24

14:                                               ; preds = %8, %1
  %15 = load i64, i64* @conn_expect_query, align 8
  %16 = load %struct.connection*, %struct.connection** %2, align 8
  %17 = getelementptr inbounds %struct.connection, %struct.connection* %16, i32 0, i32 0
  store i64 %15, i64* %17, align 8
  %18 = load %struct.connection*, %struct.connection** %2, align 8
  %19 = call %struct.TYPE_4__* @HTC_FUNC(%struct.connection* %18)
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32 (%struct.connection*)*, i32 (%struct.connection*)** %20, align 8
  %22 = load %struct.connection*, %struct.connection** %2, align 8
  %23 = call i32 %21(%struct.connection* %22)
  br label %24

24:                                               ; preds = %14, %8
  %25 = load %struct.connection*, %struct.connection** %2, align 8
  %26 = getelementptr inbounds %struct.connection, %struct.connection* %25, i32 0, i32 4
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = icmp sgt i64 %28, 0
  br i1 %29, label %30, label %36

30:                                               ; preds = %24
  %31 = load i32, i32* @C_WANTWR, align 4
  %32 = load %struct.connection*, %struct.connection** %2, align 8
  %33 = getelementptr inbounds %struct.connection, %struct.connection* %32, i32 0, i32 3
  %34 = load i32, i32* %33, align 8
  %35 = or i32 %34, %31
  store i32 %35, i32* %33, align 8
  br label %36

36:                                               ; preds = %30, %24
  %37 = load i64, i64* @conn_generation, align 8
  %38 = add nsw i64 %37, 1
  store i64 %38, i64* @conn_generation, align 8
  %39 = load %struct.connection*, %struct.connection** %2, align 8
  %40 = getelementptr inbounds %struct.connection, %struct.connection* %39, i32 0, i32 2
  store i64 %38, i64* %40, align 8
  %41 = load %struct.connection*, %struct.connection** %2, align 8
  %42 = getelementptr inbounds %struct.connection, %struct.connection* %41, i32 0, i32 1
  store i64 0, i64* %42, align 8
  ret i32 0
}

declare dso_local %struct.TYPE_4__* @HTC_FUNC(%struct.connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
